# Boiler

./: README.md  boil.bat  pyproject.toml
boiler/: __init__.py  __main__.py  annotations.py  entry_creation.py  pre_process.py
boiler/templates/: pyscript.toml
